# sapphire

./: .gitignore  Cargo.toml  example.sapphire_config.toml
.cargo/: config.toml
.github/workflows/: autobuild.yml
binding-magnus/: Cargo.toml  build.rs
binding-magnus/src/: audio.rs  bindings.rs  data.rs  error.rs  filesystem.rs  font.rs  graphics.rs  gvl.rs  input.rs  lib.rs  modshot.rs  oneshot.rs  props.rs
binding-magnus/src/data/: color.rs  rect.rs  table.rs  tone.rs
binding-magnus/src/graphics/: bitmap.rs  plane.rs  sprite.rs  tilemap.rs  viewport.rs  window.rs
binding-magnus/src/modshot/: audio_effects.rs  window.rs
binding-magnus/src/oneshot/: journal.rs  steam.rs  wallpaper.rs
binding-magnus/src/rpg/: xp.rb
rgss/: Cargo.toml
rgss/src/: audio.rs  config.rs  data.rs  event_loop.rs  filesystem.rs  font.rs  graphics.rs  input.rs  lib.rs
rgss/src/filesystem/: archive.rs  host.rs  list.rs  path_cache.rs
rgss/src/graphics/: bitmap.rs  sprite.rs  viewport.rs  window.rs  z.rs
rgss/src/graphics/builders/: binding_helpers.rs  descriptor_helpers.rs  shader_helpers.rs
rgss/src/input/: keycode.rs
ruby/: build-ruby.sh
sapphire/: Cargo.toml
sapphire/src/: main.rs
