[workspace]
members = ["sapphire", "rgss", "binding-magnus"]
resolver = "3"

[workspace.dependencies]
winit = "0.30.9"
gilrs = "0.11.0"
wgpu = "24.0.1"

kira = "0.10.4"

image = "0.25.5"
glyphon = "0.8.0"

slotmap = "1.0.7"

parking_lot = "0.12.3"
crossbeam = "0.8.4"

camino = "1.1.9"

thiserror = "2.0.12"
bytemuck = { version = "1.22.0", features = ["derive"] }

strum = { version = "0.27.1", features = ["derive"] }

rfd = "0.15.2"

serde = { version = "1.0.219", features = ["derive"] }
